--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta name="msapplication-config" content="/browserconfig.xml">
   <meta name="theme-color" content="#1565c0">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>ncodr-ui</title>
+  <title>ncodr</title>
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
   <script src="https://apis.google.com/js/api:client:auth2.js" async defer></script>
   <script src="/config.js"></script>
