update packages, add preload to google api

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>ncodr</title>
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
-  <script src="https://apis.google.com/js/api:client:auth2.js" async defer></script>
-  <script src="/config.js"></script>
+  <link as="script" href="https://apis.google.com/js/api:client:auth2.js" rel="preload"></script>
+  <script src="/config.js" async></script>
 </head>
 
 <body>
